--- a/Matrices/Makefile
+++ b/Matrices/Makefile
@@ -1,2 +1,5 @@
-example: example.cc
+all: example.cc mean.cc median.cc mode.cc
 	g++ -I/usr/include/eigen3 -o example example.cc
+	g++ -I/usr/include/eigen3 -o mean mean.cc
+	g++ -I/usr/include/eigen3 -o median median.cc
+	g++ -I/usr/include/eigen3 -o mode mode.cc
