--- a/ros2_ws/src/action_tutorials_cpp/package.xml
+++ b/ros2_ws/src/action_tutorials_cpp/package.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>cpp_srvcli</name>
+  <name>action_tutorials_cpp</name>
   <version>0.0.0</version>
-  <description>C++ client server tutorial</description>
+  <description>TODO: Package description</description>
   <maintainer email="alvaroarbona2003@gmail.com">alvaro</maintainer>
   <license>TODO: License declaration</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
+  <depend>action_tutorials_interfaces</depend>
   <depend>rclcpp</depend>
-  <depend>example_interfaces</depend>
+  <depend>rclcpp_action</depend>
+  <depend>rclcpp_components</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
