--- a/ros2_ws/src/olympics/CMakeLists.txt
+++ b/ros2_ws/src/olympics/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.5)
-project(olympic_interfaces)
+project(olympics)
 
 # Default to C99
 if(NOT CMAKE_C_STANDARD)
@@ -17,9 +17,21 @@ endif()
 
 # find dependencies
 find_package(ament_cmake REQUIRED)
-# uncomment the following section in order to fill in
-# further dependencies manually.
-# find_package(<dependency> REQUIRED)
+find_package(olympic_interfaces REQUIRED)
+find_package(rclcpp REQUIRED)
+find_package(rclcpp_action REQUIRED)
+find_package(rclcpp_components REQUIRED)
+
+add_executable(action_server src/action_server.cpp)
+ament_target_dependencies(action_server
+  rclcpp
+  rclcpp_action
+  olympic_interfaces)
+  
+install(TARGETS
+  action_server
+  DESTINATION lib/${PROJECT_NAME})
+
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
@@ -31,11 +43,5 @@ if(BUILD_TESTING)
   #set(ament_cmake_cpplint_FOUND TRUE)
   ament_lint_auto_find_test_dependencies()
 endif()
-
-find_package(rosidl_default_generators REQUIRED)
-rosidl_generate_interfaces(${PROJECT_NAME}
-  "action/Rings.action"
-)
-
 
 ament_package()
